--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "Tsang_Shelly_001 copy.jpeg"
-  name             : "Shelly  Tsang"
+  name             : "Shelly Tsang"
   pronouns         : # example: "she/her"  
-  bio              : "Behavioral Science Researcher"
+  bio              : "Postdoctoral Researcher in Behavioral Decision Making at UCLA"
   location         : "Los Angeles"
   employer         : "University of California Los Angeles"
   uri              : # URL
